@@ -122,6 +122,20 @@ public class Session
     private VariableManager variableManager;
     
     /**
+     * Used to control whether or not exceptions that are printed out 
+     * using the session's printStackTrace() method will include
+     * the full stack, or will just print the exception text.
+     */
+    private boolean printStackTrace = false;
+    
+    /**
+     * Used to control whether or not exceptions that are printed out 
+     * using the session's printStackTrace() method will include
+     * the name of the exception class in the output.
+     */
+    private boolean printExceptionClass = false;
+    
+    /**
      * Creates a new session.
      * 
      * @param sqshContext Handle back to the instance of sqsh that
@@ -383,6 +397,82 @@ public class Session
         return sqshContext.getStringExpander();
     }
     
+    
+    /**
+     * Determines whether or not exceptions that are printed out via
+     * the sessions printException() method will show the stack trace.
+     * 
+     * @param printStackTrace if true, then exceptions will have
+     *   their stack trace printed.
+     */
+    public void setPrintStackTrace(boolean printStackTrace) {
+    
+        this.printStackTrace = printStackTrace;
+    }
+    
+    /**
+     * @return whether or not exceptions that are printed out via
+     * the sessions printException() method will show the stack trace.
+     */
+    public boolean isPrintStackTrace() {
+    
+        return printStackTrace;
+    }
+    
+    /**
+     * Determines whether or not exceptions printed with the printException()
+     * method will include the name of the exception class in the output.
+     * 
+     * @param printExceptionClass if true, then the class name will be
+     *   included in the output.
+     */
+    public void setPrintExceptionClass(boolean printExceptionClass) {
+    
+        this.printExceptionClass = printExceptionClass;
+    }
+
+    /**
+     * @return whether or not exceptions printed with the printException()
+     * method will include the name of the exception class in the output.
+     */
+    public boolean isPrintExceptionClass() {
+    
+        return printExceptionClass;
+    }
+    
+    /**
+     * This is a utility method that should be used by any command attempting
+     * to print an exception. It prints the exception to the sessions error
+     * output, and honors the session settings for {@link #setPrintExceptionClass(boolean)}
+     * and {@link #setPrintStackTrace(boolean)}.
+     * 
+     * @param e The exception to print.
+     */
+    public void printException (Throwable e)
+    {
+        if (printExceptionClass)
+            err.print("["+e.getClass().getName()+"]: ");
+        
+        if (printStackTrace) {
+            
+            e.printStackTrace(err);
+        }
+        else {
+            
+            err.println(e.toString());
+            
+            e = e.getCause();
+            while (e != null) {
+            
+                if (printExceptionClass)
+                    err.print("["+e.getClass().getName()+"]: ");
+                err.println(e.toString());
+                e = e.getCause();
+            }
+        }
+    }
+    
+
     /**
      * Returns whether or not this session has a connection.
      * 
