@@ -319,5 +319,77 @@ SEE ALSO
    None.
         ]]></Help>	
 	</Property>
+    
+	<Property bean="session" name="show_stack" property="printStackTrace">
+        <Description>Enables/disables display of stack trace from exceptions</Description>
+        <Help><![CDATA[
+VARIABLE
+   show_stack - Controls whether or not stack traces are display from exceptions
+
+DESCRIPTION
+   The ${show_stack} boolean variable controls whether or not exceptions
+   thrown during the execution of a command (such as "\go") will display
+   just the text of the exception or the full stack trace.  The default 
+   is "false", limiting the output to just the text of the exception.
+   This is typically only set to true if you need to debug a problem within
+   a driver or possibly a specific command.
+   
+   Currently not all places that deal with exceptions in jsqsh honor this
+   setting.
+   
+SEE ALSO
+   show_exclass
+        ]]></Help>	
+	</Property>
+    
+	<Property bean="session" name="show_exclass" property="printExceptionClass">
+        <Description>Enables/disables display of exceptions class name</Description>
+        <Help><![CDATA[
+VARIABLE
+   show_exclass - Controls whether or not the exception class name is displayed
+
+DESCRIPTION
+   The ${show_exclass} boolean variable controls whether or not exceptions
+   thrown during the execution of a command (such as "\go") will display
+   the class name of the exception, along with the text of the exception. The
+   default is "false". This is typically only set to true if you need to 
+   debug a problem within a driver or possibly a specific command.
+   
+   Currently not all places that deal with exceptions in jsqsh honor this
+   setting.
+   
+SEE ALSO
+   show_stack
+        ]]></Help>	
+	</Property>
+
+	<Property bean="session" name="exec_mode" 
+                  property="ConnectionContext.executionModeName"
+	          quiet="true">
+        <Description>The SQL execution style for the current connection</Description>
+        <Help><![CDATA[
+VARIABLE
+   exec_mode - Controls the manner in which SQL execution is performed.
+
+DESCRIPTION
+   By default JSqsh sends SQL to the remote database server in "immediate"
+   mode (for those of you savvy with Java, it is Connection.execute(...)),
+   which means that the server just takes the SQL, parses, and runs it. 
+   For certain database platforms, however, certain types of statements cannot
+   be run in immediate mode.  For example DB2 z/OS cannot execute a procedure
+   call ("CALL procname") in immediate mode--the SQL must first be prepared
+   (It's silly, and I don't know why).
+
+   This variable switches the mode in which JSqsh sends SQL to the remote
+   server.  It may be set to either 'immediate' or 'prepare'. 
+
+   It is rare that you should ever need to change this variable. Most
+   driver definitions in jsqsh will automatically set this to the correct
+   value when you connect to the server.
+   
+SEE ALSO
+   None.
+        ]]></Help>	
+	</Property>
 	
 </Variables>
